# interprogram

./: CMakeLists.txt  README.md
doc/: CSIRAC-history.md  INTERMAN.odt  ref-args-and-locals.md  ref-character-set.md  ref-console.md  ref-control-flow1.md  ref-control-flow2.md  ref-define-stmt.md  ref-ident-and-const.md  ref-input-output.md  ref-math.md  ref-other.md  ref-preliminary.md  ref-random.md  ref-strings.md  ref-vars-and-types.md  reference.md
examples/: 3dplot.ip  3dplot_classic.ip  README.md  hello_world.ip  hello_world2.ip  matches1.ip  matches2.ip  nim.ip  pythagoras.ip
examples/classic/: 3dplot.ip  matches.ip  pythagoras.ip  sinewave.ip
examples/extended/: 3dplot.ip  dice.ip  hello_world.ip  matches.ip  pythagoras.ip  sinewave.ip
examples/manual/: README.md  example1.ip  example2.ip  example2a.ip  example3.ip  example4.ip
src/: CMakeLists.txt
src/common/: CMakeLists.txt  ip_ast.c  ip_ast.h  ip_errors.c  ip_exec.c  ip_exec.h  ip_labels.c  ip_labels.h  ip_listing.c  ip_parser.c  ip_parser.h  ip_program.c  ip_program.h  ip_string.c  ip_string.h  ip_symbols.c  ip_symbols.h  ip_token.c  ip_token.h  ip_types.h  ip_value.c  ip_value.h  ip_vars.c  ip_vars.h
src/console/: CMakeLists.txt  ip_console.h  ip_curses.c  ip_no_console.c
src/interpreter/: CMakeLists.txt  main.c
src/math/: CMakeLists.txt  ip_bitwise.c  ip_math.c  ip_math.h  ip_math_lib.c  ip_math_lib.h  ip_other.c  ip_power.c  ip_round.c  ip_trig.c
src/original/: README.md  T754.CVT
src/ref/: ip_tokens.h
src/string/: CMakeLists.txt  ip_string_lib.c  ip_string_lib.h
syntax/: README.md  interprogram.vim  ipdetect.vim
test/: CMakeLists.txt
test/interprogram/: CMakeLists.txt  README.md  arrays.ip  conditions.ip  control_flow1.ip  control_flow2.ip  input.ip  math1.ip  math2.ip  math3.ip  math4.ip  math5.ip  routines.ip  strings.ip
test/tokens/: CMakeLists.txt  token-test.c
test/unit/: CMakeLists.txt  token-test.c
