add_executable(interprogram
    main.c
)
target_include_directories(
    interprogram
    PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}/../common
        ${CMAKE_CURRENT_LIST_DIR}/../console
        ${CMAKE_CURRENT_LIST_DIR}/../math
        ${CMAKE_CURRENT_LIST_DIR}/../string
)
target_link_libraries(
    interprogram
    PUBLIC
        interprogram-math
        interprogram-string
        interprogram-console
        interprogram-common
        m
        ${INTERPROGRAM_EXTRA_LIBS}
)
install(TARGETS interprogram DESTINATION bin)
